# SRGD

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.dvc/: config
api/: Dockerfile  info.txt  main.py  real_esrgan.py
api/configs/: RealESRGAN_x2plus.yaml  RealESRGAN_x4plus.yaml  RealESRGAN_x4plus_anime_6B.yaml  RealESRNet_x4plus.yaml  real_esrgan.yaml  realesr-animevideov3.yaml  realesr-general-x4v3.yaml
api/extra/: info.txt
api/model/: real_esrgan.py
api/utils/: parse.py
configs/: compress.yaml
configs/metric/downscale/: ASCTeuthisan.yaml  ActionRPG.yaml  AllProjects.yaml  ArchVizInterior.yaml  BroadcastSample.yaml  CSGO.yaml  CitySample.yaml  DMXPrevisSample.yaml  Dota2.yaml  ElectricDreamsEnv.yaml  ElementalDemo.yaml  HillsideSample.yaml  MLDeformerSample.yaml  Matinee.yaml  MeerkatDemo.yaml  ParticleEffects.yaml  RealisticRendering.yaml  SlayAnimationSample.yaml  StylizedRendering.yaml  SubwaySequencer.yaml  SunTemple.yaml
configs/metric/game_engine/: ASCTeuthisan.yaml  ActionRPG.yaml  AllProjects.yaml  ArchVizInterior.yaml  BroadcastSample.yaml  CitySample.yaml  ElectricDreamsEnv.yaml  ElementalDemo.yaml  HillsideSample.yaml  MLDeformerSample.yaml  Matinee.yaml  MeerkatDemo.yaml  ParticleEffects.yaml  RealisticRendering.yaml  SlayAnimationSample.yaml  StylizedRendering.yaml  SubwaySequencer.yaml  SunTemple.yaml
configs/model/: RealESRGAN_x2plus.yaml  RealESRGAN_x4plus.yaml  RealESRGAN_x4plus_anime_6B.yaml  RealESRNet_x4plus.yaml  realesr-animevideov3.yaml  realesr-general-x4v3.yaml
configs/model/finetuned/: RealESRGAN_x4plus.yaml  RealESRGAN_x4plus_GameEngineData.yaml
configs/model/pretrained/: EMT_x2.yaml  EMT_x3.yaml  EMT_x4.yaml  RealESRGAN_x2plus.yaml  RealESRGAN_x4plus.yaml  RealESRGAN_x4plus_anime_6B.yaml  RealESRNet_x4plus.yaml  ResShift_BicSRx4_Matlab.yaml  ResShift_BicSRx4_OpenCV.yaml  ResShift_RealSRx4.yaml  realesr-animevideov3.yaml  realesr-general-x4v3.yaml
configs/train/: finetune_emt_x4_game_engine.yaml  finetune_realesrgan_x4plus.yaml  finetune_realesrgan_x4plus_game_engine.yaml
configs/triton_model/finetuned/: RealESRGAN_x4plus_GameEngineData.yaml
configs/triton_model/pretrained/: RealESRGAN_x2plus.yaml  RealESRGAN_x4plus.yaml  realesr-animevideov3.yaml  realesr-general-x4v3.yaml
datasphere/: metric_inference.ipynb  prepare_data.ipynb  prepare_env_and_data.ipynb  requirements.txt  train.ipynb  train_emt.ipynb  train_real_esrgan.ipynb
docs/: DEPLOY.md  EDA.md  METRICS.md  MLFLOW.md  OPTIMIZATION.md  SERVICE.md  TRAINING.md  WEIGHTS.md
dvc_data/: .gitignore  metrics.csv.dvc  metrics.dvc  onnx.dvc  weights.dvc
kaggle/: predict.py  predict_local.py  psnr.py  rle.py
metric/: metric.py  metric_class.py  metric_inference.py  options.py  real_esrgan.py
metric/pretrained/: real_esrgan.py
mlflow/: .env  docker-compose.yaml
model/: __init__.py  emt_model.py  real_esrgan.py  resshift.py
optimization/: onnx2trt.sh  torch2onnx.py
optimization/onnx/: real_esrgan.py
tests/: test_api.py  test_metric.py  test_metric_auto.py  test_rle.py
train/: emt_model.py  real_esrgan.py
triton_models/Finetuned_RealESRGAN_x4plus_GameEngineData/: config.pbtxt
triton_models/RealESRGAN_x2plus/: config.pbtxt
triton_models/RealESRGAN_x4plus/: config.pbtxt
triton_models/RealESRGAN_x4plus_anime_6B/: config.pbtxt
triton_models/RealESRNet_x4plus/: config.pbtxt
triton_models/realesr-animevideov3/: config.pbtxt
triton_models/realesr-general-x4v3/: config.pbtxt
ui/: Dockerfile  main.py
unreal/: 1080p.uasset  270p.uasset  360p.uasset  540p.uasset  render-queue.uasset
unreal-engine/: 1080p.uasset  270p.uasset  360p.uasset  540p.uasset
utils/: align.py  analyze_metrics.py  compress.py  create_local_dataset.sh  download_weights.py  mv_into_val.py  mv_into_val.sh  parse.py  rename.py  split.py  vizualize_net.py
weights/: .gitignore  real-esrgan.dvc
