[tool.poetry]
name = "srgb"
version = "0.1.0"
description = "super resolution gaming benchmark"
authors = ["pe4eniks <evgeniipishchik@mail.ru>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^69.0.2"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
dvc = {extras = ["s3"], version = "^3.33.3"}
pillow = "^10.1.0"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
numpy = "^1.26.2"
torch = "^2.1.1"
opencv-python = "^4.8.1.78"
albumentations = "^1.3.1"
einops = "^0.7.0"
timm = "^0.9.12"
basicsr = {path = './submodules/basicsr', develop = true}
emt = {path = './submodules/emt', develop = true}
realesrgan = {path = './submodules/real-esrgan', develop = true}
xformers = "^0.0.23.post1"
transformers = "^4.38.1"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = "^0.109.1"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.7"
httpx = "^0.27.0"

[tool.poetry.group.exp]
optional = true

[tool.poetry.group.exp.dependencies]
black = "^23.12.1"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
datasets = "^2.15.0"
huggingface-hub = {git = "https://github.com/huggingface/huggingface_hub.git"}
piq = "^0.8.0"
mlflow = "^2.10.2"
pynvml = "^11.5.0"
netron = "^7.4.6"

[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
streamlit = "^1.30.0"

[tool.poetry.group.optimization]
optional = true

[tool.poetry.group.optimization.dependencies]
onnx = "^1.15.0"
onnxscript = "^0.1.0.dev20240218"
onnxruntime-gpu = {version = "^1.17.0", source = "ort_azure_devops_feed"}
tritonclient = {extras = ["all"], version = "^2.42.0"}

[[tool.poetry.source]]
name = "ort_azure_devops_feed"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
